# CodeArtisans-VoiceAgent

./: .gitattributes  .gitignore
avip-agent-main/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  agent.py  pyproject.toml
avip-agent-main/.cursor/skills/avip-agent-python/: SKILL.md
avip-agent-main/.github/workflows/: ci.yml
avip-agent-main/avip_agent/: __init__.py  config.py  job_state.py  metadata.py  openrouter.py  signal.py  trai.py
avip-agent-main/avip_agent/dialogue/: language.py  recruitment_planner.py  scenario_goals.py  scenario_planner.py  scenario_signals.py  scenarios.py  scripts.py  simulation_script.py  turn_planner.py
avip-agent-main/avip_agent/sarvam/: __init__.py  client.py  stt.py  tts.py
avip-agent-main/avip_agent/session/: participants.py  pstn.py  runner.py  speech.py
avip-agent-main/deploy/: README.md  STAGING.md
avip-agent-main/deploy/compose/: docker-compose.yml
avip-agent-main/tests/: conftest.py  test_config.py  test_livekit_contract.py  test_metadata.py  test_platform_smoke.py  test_sarvam_client.py  test_scenario_planner.py  test_signal.py  test_simulation_flow.py  test_trai.py  test_turn_planner.py
avip-platform/: .dockerignore  .env.example  .env.staging-demo.example  .gitignore  Dockerfile  README.md  Taskfile.yml  build.gradle.kts  settings.gradle.kts  skills-lock.json
avip-platform/.cursor/skills/avip-compliance/: SKILL.md
avip-platform/.cursor/skills/avip-platform-dev/: SKILL.md
avip-platform/.github/workflows/: ci.yml  staging-demo-deploy.yml
avip-platform/deploy/: README.md  STAGING_CUTOVER.md  STAGING_DEMO.md
avip-platform/deploy/compose/: docker-compose.yml  staging-demo.yml
avip-platform/deploy/ec2/: caddy-demo-routes.snippet
avip-platform/docs/: IDENTITY.md  MIGRATION_PLAN.md  REBUILD_PHASES_11_17.md  REBUILD_PHASES_5_10.md
avip-platform/gradle/: libs.versions.toml
avip-platform/platform-api/: build.gradle.kts
avip-platform/platform-marketing/: build.gradle.kts
avip-platform/platform-web/: index.html  package-lock.json  package.json  vite.config.ts
avip-platform/platform-web/src/: App.tsx  index.css
avip-platform/platform-worker/: build.gradle.kts
avip-platform/platform-workflow/: build.gradle.kts
avip-platform/scripts/: dev.sh  sync-env-from-avip.sh
avip-platform/scripts/staging-demo/: deploy-on-host.sh
clinic-backend/: Dockerfile  README.md  config.py  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
clinic-backend/routes/: admin.py  availability.py  bookings.py  holds.py
clinic-inbound-agent/: Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  requirements.txt
clinic-inbound-agent/clinic_inbound_agent/: call_log.py  config.py  inbound_flow.py  planner.py  sms.py  tools.py
payments/: Dockerfile  main.py  pyproject.toml  razorpay_client.py  sms.py  webhook.py
(+220 files in other folders)
