[project]
name = "avip-agent"
version = "0.1.0"
description = "AVIP Python LiveKit voice agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[silero]~=1.2",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
avip-agent = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["avip_agent"]
only-include = ["avip_agent", "agent.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests, no LiveKit server or network",
    "integration: optional tests that need LiveKit Cloud credentials",
]
