[project]
name = "clinic-backend"
version = "0.1.0"
description = "Mock clinic scheduling backend — slots, holds, bookings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
