[project]
name = "clinic-payments"
version = "0.1.0"
description = "Razorpay payment link + webhook handler for clinic booking"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = []
only-include = []
